# bizniz-fork

./: .gitignore  README.md  config.py  pyproject.toml  requirements.txt  run.sh
.github/workflows/: deploy.yml  discord.yml
app/: main.py
app/api/v1/: __init__.py  api.py  auth.py  payments.py  services.py  users.py  webhooks.py
app/api/v1/services/: gemini.py  router.py
app/core/: config.py  decorators.py  dependencies.py
app/schemas/: msg.py  token.py  transaction.py  user.py
app/services/: email_service.py  gemini_service.py  pocketbase_service.py  stripe_service.py
app/services/clients/: gemini.py
app/services/internal/: email_service.py  pocketbase_service.py  redis_service.py  stripe_service.py
app/static/css/: style.css
app/static/js/: main.js
app/templates/: agents.html  dashboard.html
app/templates/auth/: forgot_password.html  login.html  message.html  register.html  reset_password_form.html
app/templates/emails/: general_notification.html  renewal_receipt.html  subscription_cancelled.html  subscription_started.html
app/templates/layouts/: base.html
app/templates/main/: index.html  policy.html  pricing.html
app/templates/partials/: flash.html  footer.html  navbar.html
app/web/: auth_routes.py  routes.py
tests/: configtest.py  conftest.py  test_auth.py  test_auth_flow.py  test_payments_flow.py  test_user_profile_flow.py  test_users.py
