[project]
name = "bizniz"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "elevenlabs>=2.16.0",
    "fastapi>=0.118.0",
    "google-cloud-vision>=3.10.2",
    "google-generativeai>=0.8.5",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "mutagen>=1.47.0",
    "passlib[bcrypt]>=1.7.4",
    "pocketbase>=0.15.0",
    "pydantic-settings>=2.11.0",
    "pydantic[email]>=2.11.10",
    "python-dotenv>=1.1.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "resend>=2.15.0",
    "stripe>=13.0.1",
    "uvicorn>=0.37.0",
]
