[project]
name = "bw.ai"
version = "0.1.0"
description = "bw.ai bizniz api"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.118.0",
    "pocketbase>=0.15.0",
    "stripe>=13.0.1",
    "resend>=2.15.0",
    "pydantic-settings>=2.11.0",
    "pydantic[email]>=2.11.10",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.20",
    "uvicorn>=0.37.0",
    "redis>=7.0.1",
    "google>=3.0.0",
    "google-auth>=2.43.0",
    "requests>=2.32.5",
]
